@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.737 2003/02/19 10:51:08 jonnymind Exp $
+ * $Id: ChangeLog,v 1.738 2003/02/19 12:17:30 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-02-19 17:30 UTC+0100 Ian Anderson <ianderson@procon-online.de>
+  * source/common/hbtrace.c
+    ! HB_TRACELEVEL() now works as documented in tracing.txt
+    hb_tracelevel() was setting the wrong variable for the trace
+    level, and hb_tr_trace() was not testing correctly to see if the
+    trace should be displayed at the current level setting
 
 2003-02-19 13:14 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * source/vm/hvm.c
